tests/NormalTests/paczka1/fuzzy1/93884218.err
Error in line 5: SteAYGjhM S274 25,8
Error in line 15: SteAYGjhM A682 67,6
Error in line 13: wrSP S274 6,8
Error in line 22: wrSP A682 6,0
Error in line 27: wrSP S274 62,6
Error in line 24: X11 A617 99,5
Error in line 34: wrSP A682 20,5
